# ftep

./: .gitignore  CHANGELOG.md  README.md  accessions.go  accessions_file.go  accessions_test.go  build.sh  client.go  client_test.go  constants.go  go.mod  live_test.go  ncbi.go  pyproject.toml  reads.go  reads_test.go
.github/workflows/: live-smoke.yml  release.yml  test.yml
cmd/ftep/: main.go  main_test.go  open.go  reads.go
cmd/ichsm/: identify.go  main.go  main_test.go  open.go  reads.go  table.go
src/ftep/: __init__.py  __main__.py  accessions.py  constants.py  filereport.py  search.py  utils.py
src/ftep/tasks/: __init__.py  filereport.py  get_fields.py  search.py
tests/: accessions_test.py
