[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ftep"
version = "0.0.1"
description = "Species probes generator"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "requests",
]

[project.scripts]
ftep = "ftep.__main__:main"


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py3

[testenv]
deps = pytest
commands = pytest {posargs}
"""
